# pulya

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PERFORMANCE_RESEARCH.md  PR.md  README.md  ROADMAP.md  generate_benchmark_report.sh  justfile  pyproject.toml
.github/workflows/: benchmark.yml  build.yml  publish.yml
.opencode/skills/compare-branchmarks/: SKILL.md
.opencode/skills/coverage-check/: SKILL.md
benchmarks/: config.py  test_end_to_end_benchmark.py  test_headers_benchmark.py  test_request_benchmark.py  test_routing_benchmark.py  test_serialization_benchmark.py
examples/: simple_example.py
examples/simple/: __init__.py  main.py
performance-reports/baselines/: BASELINE-2026-02-05.md  BASELINE.md  baseline-20260208-0137.md
reports/: FINAL_PERFORMANCE_REPORT.md  compare_1.3_1.2.md  compare_2.1_1.3.md  performance-analysis-2026-02-06.md  performance-comparison.md  phase0-1-profiling-tools.md  phase0-2-ci-benchmarks.md  phase1-1-preencoded-errors.md  phase1-3-lru-cache.md  phase2-1-route-trie.md  phase2-2-orjson-encoder.md  phase2-3-async-locks.md  phase3-1-header-optimization.md  phase3-2-object-pooling.md  roadmap-progress-2026-02-06.md
src/pulya/: __init__.py  application.py  asgi.py  containers.py  encoders.py  headers.py  params.py  pooling.py  pulya.py  request.py  responses.py  routing.py  rsgi.py  testing.py
tests/: headers_test.py  rsgi_test.py  simple_test.py  smoke_test.py  test_coverage.py  test_encoders.py  test_pooling.py
tests/examples/: __init__.py  simple_example_test.py  simple_test.py
tools/: generate_benchmark_report.sh
