[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14"
]

[project]
name = "pulya"
version = "0.1.0"
description = "Tiny web framework based on msgspec and dependency-injector"
readme = "README.md"
authors = [
  {name = "Roman Tolkachyov", email = "roman@tolkachyov.name"}
]
requires-python = ">=3.12"
dependencies = [
  "httpx",
  "dependency-injector",
  "msgspec",
  "python-matchit",
  "asgiref"
]

[tool.coverage.run]
omit = [
  # omit tests
  "tests/*"
]
source_pkgs = [
  "pulya"
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ['pulya', 'tests']

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = ["COM812", "D203", "D212", "D", "ANN401", "TD003", "FIX002"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]
