[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "line_profiler>=4.0.0",
  "mypy>=1.9.1",
  "pre-commit>=4.5.1",
  "py-spy>=0.3.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-benchmark>=4.0.0",
  "ruff>=0.14.14"
]

[project]
name = "pulya"
version = "0.2.1"
description = "Tiny web framework based on msgspec and dependency-injector"
readme = "README.md"
authors = [
  {name = "Roman Tolkachyov", email = "roman@tolkachyov.name"}
]
requires-python = ">=3.12"
dependencies = [
  "httpx",
  "dependency-injector",
  "msgspec",
  "python-matchit",
  "asgiref",
  "granian>=2.6.1"
]

[tool.coverage.report]
precision = 2
exclude_also = [
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]

[tool.coverage.run]
omit = [
  "tests/*"
]
source = [
  "examples"
]
source_pkgs = [
  "pulya"
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ['pulya', 'tests']

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-fail-under=100"
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
ignore = ["COM812", "D203", "D212", "D", "ANN401", "TD003", "FIX002"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]
